syntax = "proto3";

package helloworld;
import "google/protobuf/duration.proto";

option java_multiple_files = true;
option java_package = "com.abn.grpcSample";
option java_outer_classname = "GreeterServiceProto";


service Greeter {
    // Sends a greeting - Unary
    rpc SayHello (HelloRequest) returns (HelloResponse) {};

    // Unary
    rpc Greet(GreetRequest) returns (GreetResponse) {};

    // Server Streaming
    rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};

    // GreeterClient streaming
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};

    // Bidirectional streaming
    rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse) {};

    // RPC with deadlines
    // this RPC will complete in no less than 300ms
    rpc GreetWithDeadline(GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse) {};
}

message Greeting {
    string first_name = 1;
    string last_name = 2;
}


// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloResponse {
    string message = 1;
    int32 age = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}
//Server streaming
message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

// GreeterClient streaming
message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse {
    string result = 1;
}

//Bidirectional
message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}

// Deadline RPC
message GreetWithDeadlineRequest {
    Greeting greeting = 1;
}

message GreetWithDeadlineResponse {
    string result = 1;
}